--- a/style.css
+++ b/style.css
@@ -94,7 +94,12 @@ table {
     font-size: 1rem;
 }
 
-table td {
+table tr {
+    font-size: 1rem;
+}
+
+table tr td {
+    font-size: 1rem;
     padding: 0.2rem 0;
 }
 
