--- a/style.css
+++ b/style.css
@@ -1,7 +1,141 @@
-:root {
+html {
     font-family: system-ui;
     line-height: 1.5rem;
 }
+
+body {
+    margin: 0;
+    padding: 0;
+}
+
+img {
+    width: 100%;
+    height: auto;
+    margin: 2rem 0 0 0;
+}
+
+h1 {
+    font-weight: 400;
+    font-size: 2rem;
+    margin: 0 0 1.2rem 0;
+}
+
+h2 {
+    font-weight: 500;
+    font-size: 1.2rem;
+    margin: 0 0 1rem 0;
+}
+
+p {
+    font-size: 1rem;
+    margin: 0;
+}
+
+a {
+    text-decoration: none;
+    color: #1f64cc;
+}
+
+.gray {
+    color: gray
+}
+
+header, main, footer {
+    max-width: 48rem;
+    margin: 0 auto;
+    padding: 0 16px;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+    padding-inline-start: 1.2rem;
+}
+
+
+
+header nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem 0;
+}
+
+header nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    padding-inline-start: 0;
+}
+
+header nav ul li {
+    display: inline-block;
+    padding-left: 1rem;
+}
+
+header .logo {
+    display: flex;
+    align-items: center;
+}
+
+header nav img {
+    height: 1.2rem;
+    width: auto;
+    margin: 0 1rem 0 0;
+}
+
+
+
+section {
+    padding: 1.4rem 0;
+}
+
+section table {
+    width: 100%;
+    table-layout: fixed;
+    font-size: 1rem;
+}
+
+section table td {
+    padding: 0.2rem 0;
+}
+
+
+
+footer {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+
+footer small {
+    display: flex;
+    align-items: center;
+}
+
+footer nav a {
+    color: gray;
+    text-decoration: underline;
+}
+
+footer nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    padding-inline-start: 0;
+}
+
+footer nav ul li {
+    display: inline-block;
+    padding-right: 1rem;
+}
+
+footer img {
+    height: 1rem;
+    width: auto;
+    margin: 0 0.7rem 0 0;
+}
+
+
 
 .show-on-mobile {
     display: none;
@@ -23,125 +157,4 @@
     .hide-on-mobile {
         display: none;
     }
-}
-
-img {
-    width: 100%;
-    height: auto;
-    margin: 2rem 0 0 0;
-}
-
-body {
-    margin: 0;
-    padding: 0;
-}
-
-hr {
-    margin: 2rem 0;
-}
-
-h1 {
-    font-weight: 400;
-    font-size: 2rem;
-    margin: 0 0 1rem 0;
-}
-
-h2 {
-    font-weight: 500;
-    font-size: 1.2rem;
-    margin-top: 0;
-    margin-bottom: 1rem;
-}
-
-p {
-    font-size: 1rem;
-    margin: 0;
-}
-
-a {
-    text-decoration: none;
-    color: #1f64cc;
-}
-
-section {
-    padding: 1rem 0;
-}
-
-header, main, footer {
-    max-width: 48rem;
-    margin: 0 auto;
-    padding: 0 16px;
-}
-
-header nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 1rem 0;
-}
-
-header nav ul li {
-    padding-left: 1rem;
-}
-
-header .logo {
-    display: flex;
-    align-items: center;
-}
-
-header nav img {
-    height: 1.2rem;
-    width: auto;
-    margin: 0 1rem 0 0;
-}
-
-ul {
-    margin: 0;
-    padding: 0;
-    padding-inline-start: 1.2rem;
-}
-
-nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    padding-inline-start: 0;
-}
-
-nav ul li {
-    display: inline-block;
-}
-
-table {
-    width: 100%;
-    table-layout: fixed;
-}
-
-table td {
-    padding: 0.2rem 0;
-}
-
-footer {
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-}
-
-footer nav a {
-    color: gray;
-    text-decoration: none;
-}
-
-footer nav ul li {
-    padding-right: 1rem;
-}
-
-footer img {
-    height: 1rem;
-    width: auto;
-    margin: 0 0.7rem 0 0;
-}
-
-footer small {
-    display: flex;
-    align-items: center;
 }
