--- a/style.css
+++ b/style.css
@@ -172,4 +172,18 @@ footer img {
     .hide-on-mobile {
         display: none;
     }
+
+    header nav {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    header nav ul {
+        padding-top: 0.6rem;
+    }
+
+    header nav ul li {
+        padding-left: 0;
+        padding-right: 1rem;
+    }
 }
