--- a/style.css
+++ b/style.css
@@ -79,6 +79,26 @@ section {
     padding: 1.4rem 0;
 }
 
+section .recipes {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    width: 100%;
+    grid-column-gap: 1rem;
+    grid-row-gap: 1rem;
+}
+
+section .recipe {
+    margin: 0;
+    padding: 0;
+}
+
+section .recipe img {
+    margin: 0;
+    padding: 0;
+    margin-bottom: 0.2rem;
+}
+
 section img {
     width: 100%;
     height: auto;
@@ -186,5 +206,9 @@ footer img {
     header nav ul li {
         padding-left: 0;
         padding-right: 1rem;
+    }
+
+    section .recipes {
+        grid-template-columns: 1fr 1fr;
     }
 }
