--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ section .recipes {
     grid-template-rows: auto;
     width: 100%;
     grid-column-gap: 1rem;
-    grid-row-gap: 1rem;
+    grid-row-gap: 1.4rem;
 }
 
 section .recipe {
@@ -98,6 +98,14 @@ section .recipe img {
     margin: 0;
     padding: 0;
     margin-bottom: 0.2rem;
+}
+
+section .recipe-details {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    width: 100%;
+    grid-row-gap: 1rem;
 }
 
 section img {
@@ -128,6 +136,7 @@ section ol {
 section ol li {
     display: block;
     margin-left: 1rem;
+    margin-bottom: 0.4rem;
 }
 
 section ol li:before {
@@ -174,25 +183,10 @@ footer img {
 
 
 
-.show-on-mobile {
-    display: none;
-}
-
-.hide-on-mobile {
-    display: table;
-}
-
 @media screen and (max-width: 40rem) {
     html {
         font-size: 14px;
-    }
-
-    .show-on-mobile {
-        display: table;
-    }
-
-    .hide-on-mobile {
-        display: none;
+        line-height: 1.3rem;
     }
 
     header nav {
@@ -210,6 +204,10 @@ footer img {
     }
 
     section .recipes {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    section .recipe-details {
         grid-template-columns: 1fr 1fr;
     }
 }
